页面： 修改首页页面 修改首页在住信息修改页面 修改会员列表页面 修改会员详情页面 修改会员注销功能 修改会员修改功能 修改会员挂账功能 修改会员卡列表页面 修改商品交易挂账功能 修改会员积分冲减BUG

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -429,7 +429,7 @@
                     '</legend>',
                     '<div class="flex-container">'].join("");
                 for (var j = 0; j < f.length; j++) {
-                    str += ['<div data-dirty=', f[j].status === 'dirty', ' data-maintain=', f[j].maintain === 'yes', ' data-status="', f[j].status === 'inthe',
+                    str += ['<div data-dirty=', f[j].status === 'dirty', ' data-maintain=', f[j].maintain === 'yes', ' data-status="', f[j].status === 'inthe' || f[j].status === 'timeout',
                         '" data-state="', judgmentState(f[j].makeStatus),
                         '" class="item state-', f[j].status,
                         '" data-roomid="' + f[j].roomId, '">',
