--- a/src/main/webapp/iframe_tally1.html
+++ b/src/main/webapp/iframe_tally1.html
@@ -42,7 +42,7 @@
                 type: 'POST',
                 dataType: 'json',
                 data: {
-                    name: data.field.roomNum
+                    roomName: data.field.roomNum
                 },
                 success: function (rs) {
                     if (rs.success) {
@@ -60,6 +60,7 @@
                             shadeClose: true,
                             content: uu,
                             end: function () {
+                                sessionStorage.removeItem('tallyInfo1');
                                 var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                                 parent.layer.close(index); //再执行关闭
                             }
