--- a/src/main/webapp/iframe_card_pay.html
+++ b/src/main/webapp/iframe_card_pay.html
@@ -75,6 +75,7 @@
                 shadeClose: true,
                 content: uu,
                 end: function () {
+                    sessionStorage.removeItem('addMemberInfo')
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                     parent.layer.close(index); //再执行关闭
                 }
