--- a/src/main/webapp/iframe_shop.html
+++ b/src/main/webapp/iframe_shop.html
@@ -129,6 +129,7 @@
                 shadeClose: true,
                 content: 'iframe_tally.html?s=1&r='+Date.now(),
                 end: function () {
+                    sessionStorage.removeItem('tally');
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                     parent.layer.close(index); //再执行关闭
                 }
