--- a/src/main/webapp/iframe_tally.html
+++ b/src/main/webapp/iframe_tally.html
@@ -57,6 +57,7 @@
                             shadeClose: true,
                             content: 'iframe_tallyInfo.html?v='+Date.now(),
                             end: function () {
+                                sessionStorage.removeItem('tallyInfo');
                                 var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                                 parent.layer.close(index); //再执行关闭
                             }
