--- a/src/main/webapp/member.html
+++ b/src/main/webapp/member.html
@@ -41,7 +41,8 @@
     <div class="query-box">
         <div class="layui-inline">
             <div class="layui-input-inline">
-                <input type="text" name="query" id="query" placeholder="输入姓名/手机号/证件号" autocomplete="off" class="layui-input">
+                <input type="text" name="query" id="query" placeholder="输入姓名/手机号/证件号" autocomplete="off"
+                       class="layui-input">
             </div>
             <a href="#" id="queryBtn" class="layui-btn">查询</a>
         </div>
@@ -65,31 +66,31 @@
                 getReport($)
             }, 60000)
         })
-        document.onkeydown = function(e) { // 回车提交表单
+        document.onkeydown = function (e) { // 回车提交表单
             var theEvent = window.event || e;
             var code = theEvent.keyCode || theEvent.which;
-            if(code == 13) {
+            if (code == 13) {
                 $("#queryBtn").click(); // #chk_match 是你 提交按钮的ID
             }
         }
         var tableObj = table.render({
-             elem: '#member'
+            elem: '#member'
             , method: 'POST'
-            ,url:api.queryMember
-            ,request:{
-                 pageName:'pageNo'
-                ,limitName:'pageSize'
+            , url: api.queryMember
+            , request: {
+                pageName: 'pageNo'
+                , limitName: 'pageSize'
             }
-            ,response: {
+            , response: {
                 statusName: 'code' //规定数据状态的字段名称，默认：code
-                ,statusCode: 200 //规定成功的状态码，默认：0
-                ,msgName: 'msg' //规定状态信息的字段名称，默认：msg
-                ,countName: 'count' //规定数据总数的字段名称，默认：count
-                ,dataName: 'data' //规定数据列表的字段名称，默认：data
+                , statusCode: 200 //规定成功的状态码，默认：0
+                , msgName: 'msg' //规定状态信息的字段名称，默认：msg
+                , countName: 'count' //规定数据总数的字段名称，默认：count
+                , dataName: 'data' //规定数据列表的字段名称，默认：data
             }
-            ,parseData: function(res){ //res 即为原始返回的数据
+            , parseData: function (res) { //res 即为原始返回的数据
                 return {
-                    "code":200, //解析接口状态
+                    "code": 200, //解析接口状态
                     "msg": res.errMsg, //解析提示文本
                     "count": res.data.count, //解析数据长度
                     "data": res.data.memberBOS //解析数据列表
@@ -100,9 +101,11 @@
             , cols: [[
                 // {field: 'memberCardId', title: '卡号', minWidth: 80, align: 'center'},
                 {field: 'name', title: '姓名', minWidth: 80, align: 'center'},
-                {field: 'gender', title: '性别', minWidth: 80, align: 'center', templet: function (data) {
+                {
+                    field: 'gender', title: '性别', minWidth: 80, align: 'center', templet: function (data) {
                         return data.gender === 'man' ? '男' : '女';
-                    }},
+                    }
+                },
                 {field: 'phone', title: '手机号', minWidth: 120, align: 'center'},
                 {field: 'address', title: '地址', minWidth: 120, align: 'center'},
                 {field: 'memberLevelName', title: '卡类型', minWidth: 100, align: 'center'},
@@ -110,9 +113,10 @@
                 {field: 'storedValue', title: '储值', minWidth: 120, align: 'center'},
                 {field: 'integral', title: '积分', minWidth: 120, align: 'center'},
                 {field: 'salesman', title: '销售员', minWidth: 90, align: 'center'},
-                {field: 'createTime', title: '发卡日期', minWidth: 120, align: 'center'
-                    ,templet:function (d) {
-                        if(d.createTime) return DateToLStr(new Date(d.createTime.time)).split(' ')[0]
+                {
+                    field: 'createTime', title: '发卡日期', minWidth: 120, align: 'center'
+                    , templet: function (d) {
+                        if (d.createTime) return DateToLStr(new Date(d.createTime.time)).split(' ')[0]
                         return '-'
                     }
                 },
@@ -131,7 +135,7 @@
 
             if (layEvent === 'detail') { //查看
                 console.log(JSON.stringify(data));
-                localStorage['member'+data.id] = JSON.stringify(data);
+                localStorage.setItem('member' + data.id, JSON.stringify(data));
                 window.open('member_info.html?id=' + data.id);
             }
         });
@@ -174,10 +178,11 @@
         $('#queryBtn').on('click', function () {
             search();
         });
-        function  search() {
-            tableObj.reload( {
-                where:{
-                    query:document.getElementById("query").value.trim()
+
+        function search() {
+            tableObj.reload({
+                where: {
+                    query: document.getElementById("query").value.trim()
                 },
                 page: {
                     curr: 1 //重新从第 1 页开始
